--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/amiko/logo.png" />
 </head>
 
-<body style="    background-color: #c4c4c4;">
+<body style="background-color: #c4c4c4;">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 
@@ -38,10 +38,8 @@
             <div class="nav_con">
                 <a class="nav_text" href="doc/Amiko_Resume.pdf" target="_blank">Resume</a>
                 <a class="nav_text" href="https://www.linkedin.com/in/amikotcy/" target="_blank">LinkedIn</a>
-                <a id="chat" s href="https://calendly.com/amikotong1012/chat-with-me" target="_blank">Chat</a>
+                <a class="button" href="https://calendly.com/amikotong1012/chat-with-me" target="_blank">Chat</a>
             </div>
-
-
         </div>
 
 
@@ -81,7 +79,7 @@
         <div class="project_list_con">
             <div class="project_list">
                 <a class="p_frame" href="p0.html">
-                    <img class="p_img " src="img/p0.png">
+                    <img class="p_img " src="img/p0/p0.png">
                 </a>
 
                 <div class="p_text">
@@ -89,7 +87,7 @@
                         <div class="p_date">2024, Jan</div>
                         <div class="p_type">Web UI design + design system</div>
                     </div>
-                    <a class="p_name bold" href="p1.html">Unified Hub</a>
+                    <a class="p_name bold" href="p1.html">Shauct</a>
 
                     <div class="p_detail">
 
@@ -100,7 +98,7 @@
 
             <div class="project_list">
                 <a class="p_frame" href="p1.html">
-                    <img class="p_img " src="img/p1.png">
+                    <img class="p_img " src="img/p1/p1.png">
                 </a>
 
                 <div class="p_text">
@@ -119,7 +117,7 @@
 
             <div class="project_list">
                 <a class="p_frame" href="p2.html">
-                    <img class="p_img" src="img/p2.png">
+                    <img class="p_img" src="img/p2/p2.png">
                 </a>
 
                 <div class="p_text">
@@ -139,7 +137,7 @@
 
             <div class="project_list">
                 <a class="p_frame" href="p5.html">
-                    <img class="p_img" src="img/p5.png">
+                    <img class="p_img" src="img/p3/p5.png">
                 </a>
 
                 <div class="p_text">
@@ -209,7 +207,20 @@
     </section>
 
     <footer>
-        <div class="footer_text">Design and develop by Amiko in May 2023</div>
+        <div class="footer_text">Design and develop by Amiko in May 2023｜updated in 2024</div>
+
+        <!--
+        <div class="home_button_con">
+            <div class="home_button top" style="animation-duration: 12000ms; "></div>
+            <div class="home_button top" style="animation-name: spin_reverse; animation-duration: 10000ms;"></div>
+            <a href="index.html">
+                <div class="home_button real top">
+                    <p class="home_button_text">Top</p>
+                </div>
+            </a>
+
+        </div>
+-->
     </footer>
 
     <script src="index.js"></script>
