--- a/p2.html
+++ b/p2.html
@@ -22,7 +22,7 @@
 
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
+<div class="progress"></div>
 
     <a class="logo" href="index.html">
         <div class="logo_text p_logo_text cold">\(▔＾▔)/</div>
@@ -71,7 +71,7 @@
     </section>
 
     <section class="next">
-        <a class="next_text" href="index.html">👈 Back to home</a>
+        <a class="next_text" href="p5.html">View Next 👉</a>
 
 
 
@@ -86,7 +86,7 @@
             <a class="nav_text" href="doc/Amiko_Resume.pdf" target="_blank">Resume</a>
             <!--                <div class="nav_text">Email</div>-->
             <a class="nav_text" href="https://www.linkedin.com/in/amikotcy/" target="_blank">LinkedIn</a>
-            <a id="chat" href="https://calendly.com/amikotong1012/chat-with-me" target="_blank">Chat</a>
+            <a class="button" href="https://calendly.com/amikotong1012/chat-with-me" target="_blank">Chat</a>
         </div>
 
 
