--- a/p0.html
+++ b/p0.html
@@ -137,7 +137,7 @@
                 </ul>
             </div>
             <div class="ez_con">
-                <img src="img/p0/Overall.gif">
+                <img src="img/p0/Overall.png">
             </div>
         </div>
 
