--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
 
                 <div id="myDropdown" class="dropdown-content">
 
-                    <div>I’m Amiko Tong 佟春莹, an <strong>interaction designer</strong> who also code. I graduated from <a class="nav_text" href="https://www.sfu.ca/siat.html">SFU SIAT</a>, currently work at Buysmart, located in Vancouver.</div>
-
+                    <div>I’m Amiko, an <strong>interaction designer</strong> who also code. I graduated from <a class="nav_text" href="https://www.sfu.ca/siat.html">SFU SIAT</a>, previously worked at Buysmart for 2 years, located in Vancouver.</div>
+                    
                     <br>
 
-                    <div style="opacity:0.5; ">I was a third culture kid raised in Shenyang, Guangzhou, and Vancouver. Growing up in multicultural environment gives me a unique perspective to understand diversity.</div>
-
+                    <div style="opacity:0.5; ">I enjoy music production and playing game during my free time. I lived in Shenyang, Guangzhou, and Vancouver. Experienced in multicultural environment gives me a unique perspective to understand diversity.</div>
                 </div>
             </div>
         </div>
