--- a/p0.html
+++ b/p0.html
@@ -49,7 +49,7 @@
                 <span class="bold">Contribution</span>
                 <br>
                 <br>
-                UI Designe and Prototype, <span class="italic p_detail">initially building the platform's UI and design system</span>
+                UI Designer and Prototype, <span class="italic p_detail">initially building the platform's UI and design system</span>
             </div>
             <div class="info_info">
                 <span class="bold">Collaboration</span>
