--- a/p1.html
+++ b/p1.html
@@ -25,10 +25,16 @@
     <div class="progress"></div>
 
 
-    <a class="logo" href="index.html">
-        <div class="logo_text p_logo_text cold">\(▔＾▔)/</div>
-        <div class="logo_text p_logo_text cute">୧( ◔ ᴗ ◔ )୨</div>
+        <a class="logo" href="index.html">
+        <div class="logo_text cold">A.T</div>
     </a>
+
+    <div class="nav_con">
+        <a class="nav_text" href="about.html" target="_blank">About</a>
+        <a class="nav_text" href="doc/Amiko_Resume.pdf" target="_blank">Resume</a>
+        <a class="nav_text" href="https://www.linkedin.com/in/amikotcy/" target="_blank">LinkedIn</a>
+        <a class="button" href="https://calendly.com/amikotong1012/chat-with-me" target="_blank">Chat</a>
+    </div>
 
     <section class="intro_con">
         <div class="intro">
@@ -79,16 +85,18 @@
     </section>
 
     <footer class="white">
-        <div class="footer_text">Design and develop by Amiko in May 2023</div>
+        <div class="footer_text">Design and develop by Amiko since 2023</div>
 
 
 
+<!--
         <div class="nav_con">
             <a class="nav_text" href="doc/Amiko_Resume.pdf" target="_blank">Resume</a>
-            <!--                <div class="nav_text">Email</div>-->
+                            <div class="nav_text">Email</div>
             <a class="nav_text" href="https://www.linkedin.com/in/amikotcy/" target="_blank">LinkedIn</a>
             <a class="button" href="https://calendly.com/amikotong1012/chat-with-me" target="_blank">Chat</a>
         </div>
+-->
 
 
     </footer>
