--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 
                 <div class="p_text">
                     <div class="p_date_type">
-                        <div class="p_date">2023, APR</div>
-                        <div class="p_type">Card to web features</div>
+                        <div class="p_date">2023 APR</div>
+                        <div class="p_type">UIUX Card to web features</div>
                     </div>
                     <a class="p_name bold" href="p1.html">Tough Titties Gallery</a>
 
                     <div class="p_detail">
 
-                        <p>Eunoia UX Hackathon 🏆 4th Place</p>
+                        <p>Eunoia UX Hackathon 2023 🏆 4th Place</p>
                     </div>
                 </div>
             </div>
@@ -114,14 +114,15 @@
 
                 <div class="p_text">
                     <div class="p_date_type">
-                        <div class="p_date">2023, APR</div>
-                        <div class="p_type">Mobile app</div>
+                        <div class="p_date">2023 APR</div>
+                        <div class="p_type">UIUX Mobile app</div>
                     </div>
                     <a class="p_name bold" href="p2.html">Lyric Lab</a>
 
                     <div class="p_detail">
 
                         <p>CreateSC 2023 Designathon 🏆 2th Place</p>
+                        <p>MUSE Awards 2024 Gold Winner</p>
 
                     </div>
                 </div>
@@ -141,7 +142,27 @@
 
                     <div class="p_detail">
 
-                        <p>SFU x MOV</p>
+                        <p>SFU x Museum of Vancouver</p>
+
+                    </div>
+                </div>
+            </div>
+            
+            <div class="project_list">
+                <a class="p_frame" href="p4.html">
+                    <img class="p_img" src="img/p4/p4.png">
+                </a>
+
+                <div class="p_text">
+                    <div class="p_date_type">
+                        <div class="p_date">2014 DEC</div>
+                        <div class="p_type">Motion Graphic</div>
+                    </div>
+                    <a class="p_name bold" href="p4.html">Eyes, Nose, Lips</a>
+
+                    <div class="p_detail">
+
+                        <p>SIAT 100</p>
 
                     </div>
                 </div>
